@startuml

title __NETWORK's Class Diagram__\n

      class no.ntnu.idi.apollo69.network.GameClient {
          - client : Client
          {static} - clientConnecting : boolean
          - serverIp : String
          - tcpPort : int
          - udpPort : int
          + GameClient()
          + connectClient()
          + disconnectClient()
          + getGameState()
          {static} + isClientConnecting()
          + isConnected()
          + sendMessage()
          + setGameState()
      }
      class no.ntnu.idi.apollo69.network.NetworkClientSingleton {
          - client : Client
          - defaultServerHost : String
          {static} - networkClientSingleton : NetworkClientSingleton
          - tcpPort : int
          - udpPort : int
          + getClient()
          + getGameClient()
          {static} + getInstance()
          + getTcpPort()
          + getUdpPort()
          - NetworkClientSingleton()
          - getHost()
      }

  no.ntnu.idi.apollo69.network.GameClient o-- no.ntnu.idi.apollo69framework.network_messages.UpdateMessage
  no.ntnu.idi.apollo69.network.NetworkClientSingleton o-- no.ntnu.idi.apollo69.network.GameClient

@enduml
